fix: fixed deprecated construction of URL objects